<?xml version="1.0"?>
<package format="3">
  <name>purepursuit</name>
  <version>0.0.1</version>
  <description>Pure Pursuit algorithm implementation for ROS 2</description>

  <maintainer email="wpgnssla34@kaist.ac.kr">KangJehun</maintainer>

  <license>MIT</license> 

  <author email="wpgnssla34@kaist.ac.kr">KangJehun</author>

  <url type="website">https://unmanned.kaist.ac.kr/</url>
  <url type="repository">https://github.com/kangjehun/purepursuit.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>